# fts3

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
doc/man/alto/: alto_client.8
packaging/rpm/: fts.spec
src/: CMakeLists.txt
src/alto/: CMakeLists.txt  Makefile  alto_client.cpp  alto_client.hpp  main.cpp  multipart_parser.c  pathvector.multipart
src/config/: fts3config  serverconfigreader.cpp
src/db/generic/: LinkConfig.h  Pair.h  ThrInfo.h
src/db/mysql/: MySqlAPI.cpp  OptimizerDataSource.cpp  sociConversions.h
src/db/schema/mysql/: fts-diff-8.0.0.sql  fts-diff-8.1.0.sql  fts-diff-8.1.1.sql  fts-diff-9.0.1.sql  fts-schema-8.1.0.sql  fts-schema-9.0.1.sql  fts-schema-9.1.0.sql
src/monitoring/: msg-ifce.cpp  msg-ifce.h
src/qos-daemon/fetch/: FetchStaging.cpp
src/qos-daemon/task/: BringOnlineTask.cpp
src/server/: CMakeLists.txt
src/server/services/optimizer/: Optimizer.cpp  Optimizer.h  OptimizerConnections.cpp  OptimizerService.cpp  OptimizerTCN.cpp  OptimizerTCN.h  TCNEvenLoop.cpp  TCNEventLoop.cpp  TCNEventLoop.h  TestOptimizerTCN.cpp
src/server/services/transfers/: FileTransferExecutor.cpp  TransfersService.cpp  UrlCopyCmd.cpp  UrlCopyCmd.h
src/url-copy/: Gfal2.h  UrlCopyOpts.cpp  UrlCopyOpts.h  UrlCopyProcess.cpp
test/unit/server/services/optimizer/: Optimizer.cpp
